--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
         voteBtn: "Bozkatu 1-10",
         mapsBtn: "Nola iritsi",
         updated: "Eguneratua:",
-        note: "Irabazlea punturik gehien duen taberna izango da (nota guztien batura). Berdinketan: boz gehien.",
+        note: "Irabazlea punturik gehien dituen taberna izango da (nota guztien batura). Berdinketa badago: bozka gehien dituenak.",
         th_bar: "Taberna",
         th_pts: "Puntuak",
         th_votes: "Bozkak",
@@ -426,3 +426,4 @@
   </script>
 </body>
 </html>
+
